--- a/outlook.HTML
+++ b/outlook.HTML
@@ -113,15 +113,15 @@
     </div>
     <div class="container">
         <div class="header">
-            Alteración de servicio de Outlook: Última actualización 04/01/2023 - 7:00 pm
+            Alteración de servicio de Teams: Última actualización 04/01/2023 - 7:00 pm
         </div>
         
         <div class="section">
             <div class="section-title" onclick="toggleContent('resumen')" role="button">Resumen del Incidente</div>
             <div class="content" id="resumen">
                 <ul>
-                    <li>Interrupción del servicio que afecta el envío y recepción de correos electrónicos.</li>
-                    <li>Problema identificado en el servidor de Outlook.</li>
+                    <li>Interrupción del servicio que afecta las reuniones y la mensajería instantánea.</li>
+                    <li>Problema identificado en los servidores de Microsoft Teams.</li>
                 </ul>
             </div>
         </div>
@@ -130,8 +130,8 @@
             <div class="section-title" onclick="toggleContent('poblacion')" role="button">Población Afectada</div>
             <div class="content" id="poblacion">
                 <ul>
-                    <li>Usuarios corporativos en la Región A.</li>
-                    <li>Aproximadamente 10,000 usuarios afectados.</li>
+                    <li>Usuarios corporativos en la Región B.</li>
+                    <li>Aproximadamente 8,000 usuarios afectados.</li>
                 </ul>
             </div>
         </div>
@@ -140,8 +140,8 @@
             <div class="section-title" onclick="toggleContent('trabajo')" role="button">Trabajo Realizado Hasta Ahora</div>
             <div class="content" id="trabajo">
                 <ul>
-                    <li>Problema identificado y escalado al equipo de ingeniería.</li>
-                    <li>Solución temporal implementada para usuarios críticos.</li>
+                    <li>Problema identificado y escalado al equipo de soporte de Microsoft.</li>
+                    <li>Se están implementando soluciones temporales para minimizar el impacto.</li>
                 </ul>
             </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="content" id="tiempo">
                 <p>Información en espera de actualización.</p>
                 <ul>
-                    <li>Próxima actualización esperada para el 04/01/2023 - 9:00 pm.</li>
+                    <li>Próxima actualización esperada para el 04/01/2023 - 9:30 pm.</li>
                 </ul>
             </div>
         </div>
