--- a/outlook.HTML
+++ b/outlook.HTML
@@ -22,7 +22,7 @@
             padding: 10px;
             font-weight: bold;
             color: green;
-            text-align: center;
+            text-align: left;
         }
         .section {
             padding: 15px;
