--- a/outlook.HTML
+++ b/outlook.HTML
@@ -33,7 +33,7 @@
             color: green;
             cursor: pointer;
             display: flex;
-            align-items: center;
+            align-items: left;
             gap: 10px;
         }
         .section-title::before {
