--- a/outlook.HTML
+++ b/outlook.HTML
@@ -69,7 +69,7 @@
     <!-- Seccion1 -->
     <div class="container">
         <div class="header">
-            Intermitencia en pago de servicios públicos Banprocesos 26/02/2025. Última actualización: 31/03/2025 3:00 p.m
+            Afectación en red de cajeros automáticos 23/03/2025. Última actualización: 23/03/2025 12:00 p.m
         </div>
         
         <div class="section">
