--- a/outlook.HTML
+++ b/outlook.HTML
@@ -82,8 +82,8 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title" id="title-outlook-resumen" onclick="toggleContent('outlook-resumen')" role="button">Servicios Afectados</div>
-            <div class="content" id="content-outlook-resumen">
+            <div class="section-title" id="title-outlook-SA" onclick="toggleContent('outlook-SA')" role="button">Servicios Afectados</div>
+            <div class="content" id="content-outlook-SA">
                 <ul>
                     <li>Pago de servicios.</li>
                     
