--- a/outlook.HTML
+++ b/outlook.HTML
@@ -142,8 +142,8 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title" id="title-outlook2-resumen" onclick="toggleContent('outlook2-resumen')" role="button">Servicios Afectados</div>
-            <div class="content" id="content-outlook2-resumen">
+            <div class="section-title" id="title-outlook2-SA" onclick="toggleContent('outlook2-SA')" role="button">Servicios Afectados</div>
+            <div class="content" id="content-outlook2-SA">
                 <ul>
                     <li>Pago de servicios.</li>
                     
@@ -161,8 +161,8 @@
         </div>
         
         <div class="section">
-            <div class="section-title" id="title-outlook2-trabajo" onclick="toggleContent('outlook2-trabajo')" role="button">Acciones realizadas hasta ahora</div>
-            <div class="content" id="content--outlook2-trabajo">
+            <div class="section-title" id="title-outlook2-ARA" onclick="toggleContent('outlook2-ARA')" role="button">Acciones realizadas hasta ahora</div>
+            <div class="content" id="content--outlook2-ARA">
                 <ul>
                     <li>Revisión del DBLINK.</li>
                     <li>Escalamiento del caso con Oracle.</li>
