--- a/outlook.HTML
+++ b/outlook.HTML
@@ -162,7 +162,7 @@
         
         <div class="section">
             <div class="section-title" id="title-outlook2-ARA" onclick="toggleContent('outlook2-ARA')" role="button">Acciones realizadas hasta ahora</div>
-            <div class="content" id="content--outlook2-ARA">
+            <div class="content" id="content-outlook2-ARA">
                 <ul>
                     <li>Revisión del DBLINK.</li>
                     <li>Escalamiento del caso con Oracle.</li>
